# kr

./: КР.Галактионов.docx
klient1/: CMakeLists.txt
klient1/body/: filework.c  main.c  network.c  pack.c  processing_manager.c  receive_manager.c  send_manager.c  str_addit_methods.c  system.c
klient1/headers/: filework.h  header.h  network.h  pack.h  processing_manager.h  receive_manager.h  send_manager.h  str_addit_methods.h  system.h
klient1/klient1/body/: network.c  send_manager.c
